<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/update_task_title"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_hint" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_et" />

        <EditText
            android:id="@+id/editTextFinishBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/finish_by_et" />

        <CheckBox
            android:id="@+id/checkBoxFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_finished_cb" />

        <Button
            android:id="@+id/button_update"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/update_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />


        <Button
            android:id="@+id/button_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorRed"
            android:text="@string/delete_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />


    </LinearLayout>
    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/teal_700"
        android:text="@string/back_btn"
        android:textSize="15dp" />


</RelativeLayout>